# NetworkLabs

./: .gitignore  README.md
Lab_1/: CMakeLists.txt  KnownInstancesStorage.cpp  KnownInstancesStorage.hpp  MulticastApp.cpp  MulticastApp.h  MulticastApp.hpp  Receiver.cpp  Receiver.hpp  Sender.cpp  Sender.hpp  main.cpp
Lab_1/include/: known_instances_storage.hpp  multicast_app.hpp  receiver.hpp  sender.hpp
Lab_1/src/: known_instances_storage.cpp  multicast_app.cpp  receiver.cpp  sender.cpp
Lab_2/: CMakeLists.txt
Lab_2/_client/: main_client.cpp
Lab_2/_server/: ClientInfo.cpp  ClientInfo.hpp  Server.cpp  Server.hpp  main_server.cpp
Lab_5/: CMakeLists.txt  connection.cpp  connection.hpp  connection_pool.cpp  connection_pool.hpp  main.cpp  proxy_server.cpp  proxy_server.hpp
Snake_Game/: CMakeLists.txt  Main.qml  README.md  appSnake_Game_resources.qrc  main_test.cpp  resources.qrc  snakes.pb.cc  snakes.pb.h
Snake_Game/include/: announcement_sender.hpp  entities.hpp  enums.hpp  exceptions_all.hpp  game_field_controller.hpp  game_model.hpp  grid_model.cpp  grid_model.hpp  in_game_field_state.hpp  utils.hpp
Snake_Game/include/controller/: snake_controller.cpp  snake_controller.hpp
Snake_Game/include/entity/: coord_point.hpp  game_announcement.hpp  game_config.hpp  game_messages.hpp  game_player.hpp  game_state.hpp  snake.hpp  snake_segment.hpp
Snake_Game/include/entity/game_messages/: abstract_message.hpp  ack_message.hpp  announcement_message.hpp  discover_message.hpp  error_message.hpp  game_message.hpp  join_message.hpp  ping_message.hpp  role_change_message.hpp  state_message.hpp  steer_message.hpp
Snake_Game/include/enum/: cell_content.hpp  direction.hpp  message_type.hpp  node_role.hpp  player_type.hpp  snake_state.hpp
Snake_Game/include/exceptions/: incomplete_code_exception.hpp
Snake_Game/include/model/: game_field.cpp  game_field.hpp  game_model.cpp  game_model.hpp
Snake_Game/include/util/: config_editor.hpp  in_game_config.cpp  in_game_config.hpp  in_game_field_state.cpp  in_game_field_state.hpp  protobuf_manager.hpp
Snake_Game/resources/: game_config.ini
Snake_Game/resources/Snake_Game_Window/: Snake_Game_Window.qmlproject  Snake_Game_Window.qmlproject.qtds
Snake_Game/resources/Snake_Game_Window/Snake_Game_Window/: Constants.qml  qmldir
Snake_Game/resources/Snake_Game_Window/Snake_Game_Window/designer/: plugin.metainfo
Snake_Game/resources/Snake_Game_Window/Snake_Game_WindowContent/: App.qml  CurrentGamesTable.qml  GameWindow.qml  JoinWindow.qml  MainMenu.qml  Options.qml
Snake_Game/src/: announcement_sender.cpp  game_field_controller.cpp  game_model.cpp  main.cpp  main_window_controller.cpp  main_window_controller.hpp
Snake_Game/src/controller/: snake_controller.cpp
Snake_Game/src/entity/: coord_point.cpp  game_announcement.cpp  game_config.cpp  game_player.cpp  game_state.cpp  snake.cpp  snake_segment.cpp
Snake_Game/src/entity/game_messages/: abstract_message.cpp  ack_message.cpp  announcement_message.cpp  discover_message.cpp  error_message.cpp  game_message.cpp  join_message.cpp  ping_message.cpp  role_change_message.cpp  state_message.cpp  steer_message.cpp
Snake_Game/src/model/: game_field.cpp  game_model.cpp
Snake_Game/src/util/: config_editor.cpp  protobuf_manager.cpp
Snake_Game/temp/: MainMenu.qml  Options.qml
Snake_Game/test/: coord_point_test.cpp  game_field_test.cpp  main_test.cpp  protobuf_manager_test.cpp  protobuf_manager_test.hpp
